--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment 0</title>
+    <meta author="Alexander Rothstein">
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
